--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,5 @@
 .catalog {
-  margin: 0 0 35px;
+  margin: 0 0 30px;
 }
 
 .catalog__subtitle {
@@ -13,11 +13,12 @@
 
 .catalog__other {
   position: relative;
+  border-bottom: 1px solid #ededed;
 }
 
 .catalog__other-subtitle {
   margin: 0 0 10px;
-  padding: 0;
+  padding: 80px 0 0;
   text-align: center;
   font-size: 16px;
   line-height: 20px;
@@ -29,7 +30,7 @@
 .catalog__other-subtitle::before {
   content: "";
   position: absolute;
-  top: -54px;
+  top: 25px;
   left: 125px;
   width: 30px;
   height: 30px;
@@ -46,6 +47,10 @@
   font-size: 16px;
   line-height: 20px;
   color: #111111;
+}
+
+.catalog__other-button {
+  margin-bottom: 25px;
 }
 
 .catalog__bonus {
@@ -80,6 +85,37 @@
 }
 
 @media (min-width: $tablet-width) {
+  .catalog__other {
+    margin: 0 0 140px 56px;
+    width: 325px;
+    border: 1px solid #ededed;
+  }
+
+  .catalog__other-wrapper {
+    margin: 0 auto;
+    padding: 0;
+    width: 250px;
+  }
+
+  .catalog__other-subtitle {
+    margin: 0 auto 30px;
+    padding-top: 165px;
+    width: 140px;
+  }
+  .catalog__other-subtitle::before {
+    top: 55px;
+    left: 133px;
+    width: 60px;
+    height: 60px;
+    background-image: url("../../img/icon-plus.svg");
+  }
+
+  .catalog__other-text {
+    margin: 0 auto 85px;
+    padding: 0;
+    width: 170px;
+  }
+
   .catalog__subtitle {
     margin-bottom: 170px;
   }
