--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -3,6 +3,10 @@
   padding: 25px 0 25px;
 }
 
+.contacts__wrapper {
+  background-color: #ffffff;
+}
+
 .contacts__title {
   margin: 0 19px 0 0;
   padding: 0;
