--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,3 +1,11 @@
+.page-footer {
+  background-color: #f2f2f2;
+}
+
+.page-footer--index {
+  background-color: #ffffff;
+}
+
 .page-footer__wrapper {
   background-color: #f2f2f2;
   padding: 40px 0 25px;
