--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -16,8 +16,6 @@
 
 @media (min-width: $desktop-width) {
   .program__header {
-    background-image: url("../../img/index-can-mobile@1x.png"), url("../../img/index-background-mobile@1x.jpg");
-    background-repeat: no-repeat, no-repeat;
-    background-position: 50% 0, 50% 0;
+    background-image: none;
   }
 }
