--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -37,14 +37,36 @@
   .page-header__logo {
     padding: 0;
   }
+
+  .page-header__logo-link {
+    margin-right: 95px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .page-header {
-    display: flex;
+    position: relative;
+  }
+
+  .page-header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: calc(100% / 2 - 40px);
+    height: 630px;
+    background-color: #64a83b;
+    background-image: url("../../img/index-background-desktop@1x.jpg");
+    background-size: 680px auto;
+    background-repeat: no-repeat;
+    background-position: right bottom;
   }
 
   .page-header__logo {
     margin-right: 540px;
+  }
+
+  .page-header__logo-link {
+    margin: 0;
   }
 }
