--- a/source/sass/blocks/slimming-example.scss
+++ b/source/sass/blocks/slimming-example.scss
@@ -7,6 +7,7 @@
 }
 
 .slimming-example__title {
+  margin: 0;
   font-size: 36px;
   line-height: 60px;
   color: #111111;
@@ -48,6 +49,10 @@
 @media (min-width: $desktop-width) {
   .slimming-example__wrapper {
     width: 1220px;
+  }
+
+  .slimming-example__title {
+    margin: 0 0 65px;
   }
 
   .slimming-example__text {
