Доделать дополнительные товары

--- a/source/sass/blocks/addition.scss
+++ b/source/sass/blocks/addition.scss
@@ -14,7 +14,7 @@
 
 @media (min-width: $tablet-width) {
   .addition__subtitle {
-    margin: 0 40px 80px;
+    margin: 0 0 80px;
     font-size: 36px;
     line-height: 36px;
   }
