--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -85,8 +85,12 @@
 }
 
 @media (min-width: $tablet-width) {
+  .catalog__subtitle {
+    padding: 0;
+  }
+
   .catalog__other {
-    margin: 0 0 140px 56px;
+    margin: 140px 0 0 56px;
     width: 325px;
     border: 1px solid #ededed;
   }
@@ -127,4 +131,25 @@
     text-align: left;
     color: black;
   }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__subtitle {
+    margin-bottom: 165px;
+  }
+
+  .catalog__other {
+    margin: 140px 0 0 78px;
+    width: 245px;
+    border: 1px solid #ededed;
+  }
+
+  .catalog__other-wrapper {
+    width: 170px;
+  }
+
+  .catalog__other-button {
+    padding: 10px 38px;
+  }
+
 }
