--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -45,21 +45,11 @@
 
 @media (min-width: $desktop-width) {
   .page-header {
-    position: relative;
+    margin-bottom: 80px;
   }
 
   .page-header::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: calc(100% / 2 - 40px);
-    height: 630px;
-    background-color: #64a83b;
-    background-image: url("../../img/index-background-desktop@1x.jpg");
-    background-size: 680px auto;
-    background-repeat: no-repeat;
-    background-position: right bottom;
+    position: relative;
   }
 
   .page-header__logo {
