--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -48,8 +48,18 @@
     margin-bottom: 80px;
   }
 
-  .page-header::before {
-    position: relative;
+  .page-header--index::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: calc(100% / 2 - 40px);
+    height: 630px;
+    background-color: #64a83b;
+    background-image: url("../../img/index-background-desktop@1x.jpg");
+    background-size: 680px auto;
+    background-repeat: no-repeat;
+    background-position: right bottom;
   }
 
   .page-header__logo {
